--- a/scss/_variables.scss
+++ b/scss/_variables.scss
@@ -9,7 +9,7 @@ $colores: (
   turquesacuatro: #146463,
   turquesacinco: #5abbb9,
   turquesaseis: #5eb6b5,
-  black:black,
+  black: rgb(0, 0, 0),
 );
 %categorias {
   display: flex;
