--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -1,23 +1,16 @@
-@import"_footer";
+@import "_footer";
 @import "_header";
 @import "_ventana_contacto";
 @import "_body";
 @import "_ventana_contacto";
-@import"_boostrapGrid";
-@import"_media";
-@import"_cardIndex";
-@import"_noticias";
+@import "_boostrapGrid";
+@import "_cardIndex";
+@import "_noticias";
 @import "_productosUno";
 @import "_productosDos";
 @import "_servicios";
 @import "_atencionalcliente";
 @import "_variables";
-@import "_cardServicios"
-
-
-
-
-
-
-
-
+@import "_cardServicios";
+@import "_preguntasfrecuentes";
+@import "_media";
