--- a/css/style.css
+++ b/css/style.css
@@ -25,12 +25,15 @@
   padding: 5px;
 }
 
-.final a img {
-  height: 30px;
-  width: 30px;
+.final a {
   border-radius: 100%;
   background-color: #5bb3b1;
   padding: 10px;
+  display: block;
+}
+.final a img {
+  height: 30px;
+  width: 30px;
 }
 
 .contenedor, .contenedor-servicios, .card_section, .final {
@@ -112,18 +115,16 @@ header {
 
 .background-contacto {
   background: #5bb3b1;
-  background: linear-gradient(0deg, #3b9b99 0%, #146463 36%, #5a8382 100%, rgb(243, 243, 243) 100%);
   padding-top: 20px;
 }
 
 .formcontacto {
-  background: #5bb3b1;
-  background: linear-gradient(0deg, #5bb3b1 0%, #146463 36%, #5a8382 100%, rgb(243, 243, 243) 100%);
+  background: #48aaa8;
   color: #fff;
   padding: 50px;
   margin: 0 auto;
   width: 300px;
-  box-shadow: 3px 3px 10px #5bb3b1;
+  box-shadow: 3px 3px 10px #48aaa8;
 }
 .formcontacto div {
   padding: 15px;
@@ -133,8 +134,13 @@ header {
 }
 
 .enviar {
-  background-color: #146463;
+  color: #fff;
   border-radius: 15px;
+  padding: 5px;
+}
+
+.btn {
+  background-color: #fff;
 }
 
 .contenedor, .contenedor-servicios, .card_section, .final {
@@ -175,18 +181,16 @@ body {
 
 .background-contacto {
   background: #5bb3b1;
-  background: linear-gradient(0deg, #3b9b99 0%, #146463 36%, #5a8382 100%, rgb(243, 243, 243) 100%);
   padding-top: 20px;
 }
 
 .formcontacto {
-  background: #5bb3b1;
-  background: linear-gradient(0deg, #5bb3b1 0%, #146463 36%, #5a8382 100%, rgb(243, 243, 243) 100%);
+  background: #48aaa8;
   color: #fff;
   padding: 50px;
   margin: 0 auto;
   width: 300px;
-  box-shadow: 3px 3px 10px #5bb3b1;
+  box-shadow: 3px 3px 10px #48aaa8;
 }
 .formcontacto div {
   padding: 15px;
@@ -196,8 +200,13 @@ body {
 }
 
 .enviar {
-  background-color: #146463;
+  color: #fff;
   border-radius: 15px;
+  padding: 5px;
+}
+
+.btn {
+  background-color: #fff;
 }
 
 .contenedor, .contenedor-servicios, .card_section, .final {
@@ -228,83 +237,6 @@ body {
   border-radius: 50px;
 }
 
-.contenedor, .contenedor-servicios, .card_section, .final {
-  display: flex;
-  justify-content: center;
-}
-
-.atencionAlCliente {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  text-align: center;
-}
-
-@media screen and (max-width: 768px) {
-  .contenedor {
-    justify-content: center;
-    align-items: center;
-    text-align: center;
-    margin: 20px 0%;
-  }
-  .contenedorBotones {
-    display: block;
-  }
-  .contenedorBotones input {
-    margin: 20px;
-  }
-  .contenedor img {
-    max-height: 400px;
-    margin: 0%;
-    width: 100%;
-  }
-  .contenedorBotonesProductos {
-    margin: 20px 0%;
-  }
-  .contenedor div.izquierda {
-    width: 100%;
-  }
-  .contenedor div.derecha {
-    width: 100%;
-  }
-  .navegacion {
-    margin: 0%;
-  }
-  .navegacion ul {
-    margin: 0%;
-  }
-  .navegacion li {
-    margin: 0%;
-  }
-  .final ul li {
-    margin: 0%;
-  }
-  .contenedor {
-    margin: 0%;
-  }
-  .contenedor div.izquierda input {
-    margin: 0%;
-  }
-  .contenedorBotonesProductos {
-    margin: 0%;
-  }
-  .ProductosSeccionProductos {
-    margin: 0%;
-  }
-  .ProductosSeccionProductos p {
-    margin: 25px 0%;
-  }
-  .ProductosSeccionProductos {
-    margin: none;
-  }
-}
-@media screen and (min-width: 990px) {
-  .navegacion {
-    height: 100px;
-    margin: 0 50px;
-    padding: 0 10px;
-  }
-}
 .contenedor, .contenedor-servicios, .card_section, .final {
   display: flex;
   justify-content: center;
@@ -516,11 +448,12 @@ body {
   color: #fff;
 }
 .contenedor div.izquierda input:hover {
-  width: 300px;
+  background-color: #146463;
 }
 
 .contenedorBotones {
   display: flex;
+  flex-wrap: wrap;
 }
 
 .contenedor div.derecha {
@@ -590,7 +523,6 @@ body {
 .cardcard {
   padding: 40px;
   justify-content: space-around;
-  margin: 0px 300px;
   color: #fff;
 }
 .cardcard h5 {
@@ -601,6 +533,7 @@ body {
 }
 .cardcard .colorgo {
   background-color: #5eb6b5;
+  object-fit: contain;
 }
 .cardcard .colorgos {
   background-color: #48aaa8;
@@ -609,8 +542,243 @@ body {
   text-align: center;
 }
 
+.card-img,
+.card-img-bottom,
+.card-img-top {
+  width: 100%;
+  height: 300px;
+  object-fit: cover;
+}
+
 .ProductosSeccionProductos h2 {
   padding-top: 110px;
+}
+
+:root {
+  --primario: #146463;
+  --gris-claro: #fff;
+  --sombra: 0 0 13px 0 #fff;
+}
+
+.mainAtencion {
+  max-width: 1000px;
+  width: 90%;
+  margin: 40px auto;
+}
+
+.tituloDePreguntas {
+  color: #fff;
+  font-weight: 700;
+  text-align: center;
+  margin: 60px 0;
+}
+
+.categoriasDelTitulo {
+  display: grid;
+  grid-template-columns: repeat(4, 1fr);
+  gap: 20px;
+  margin-bottom: 60px;
+}
+
+.categoriaTitulos {
+  cursor: pointer;
+  text-align: center;
+  padding: 40px;
+  border-radius: 10px;
+  background: #48aaa8;
+  font-weight: 700;
+  color: var(--gris-claro);
+  border: 2px solid transparent;
+  transition: 0.3s ease all;
+}
+.categoriaTitulos:hover {
+  box-shadow: var(--sombra);
+  color: #146463;
+}
+.categoriaTitulos:hover path {
+  fill: var(--primario);
+}
+.categoriaTitulos svg {
+  width: 64px;
+  margin-bottom: 10px;
+}
+.categoriaTitulos path {
+  fill: var(--gris-claro);
+  transition: 0.3s ease all;
+}
+.categoriaTitulos .activada {
+  border: 2px solid var(--primario);
+  color: rgb(248, 248, 248);
+}
+
+.categoriaTitulos.activada {
+  border: 2px solid var(--primario);
+  color: rgb(248, 248, 248);
+}
+.categoriaTitulos.activada path {
+  fill: var(--primario);
+}
+
+.contenedor-preguntas {
+  display: none;
+  grid-template-columns: 1fr;
+  gap: 40px;
+}
+
+.contenedor-preguntas.activo {
+  display: grid;
+  background-color: #5eb6b5;
+}
+
+.contenedor-pregunta {
+  background: #48aaa8;
+  border: 2px solid transparent;
+  border-radius: 10px;
+  overflow: hidden;
+  transition: 0.3s ease all;
+  cursor: pointer;
+}
+.contenedor-pregunta:hover {
+  box-shadow: var(--sombra);
+}
+
+.contenedor-pregunta.activada {
+  border: 2px solid var(--primario);
+}
+
+.pregunta {
+  font-weight: 700;
+  font-size: 20px;
+  line-height: 20px;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+.pregunta img {
+  width: 14px;
+}
+
+.respuesta {
+  color: #808080;
+  line-height: 30px;
+  max-height: 0;
+  opacity: 0;
+  transition: 0.3s ease all;
+}
+
+.contenedor-pregunta.activada .respuesta {
+  opacity: 1;
+  margin-top: 20px;
+}
+
+.contenedor-pregunta.activada img {
+  transform: rotate(45deg);
+}
+
+/*! =================================================*/
+/*! ============= Responsive Design ============= */
+/*! =================================================*/
+@media screen and (max-width: 820px) {
+  .categorias {
+    grid-template-columns: 1fr 1fr;
+  }
+  .categoriaTitulos {
+    padding: 10px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    border-radius: 5px;
+  }
+  .categoriaTitulos svg {
+    width: 30px;
+    margin-right: 10px;
+    margin-bottom: 0;
+  }
+}
+@media screen and (max-width: 500px) {
+  .categoriasDelTitulo {
+    grid-template-columns: 1fr;
+  }
+}
+.final, .card_section, .contenedor-servicios, .contenedor {
+  display: flex;
+  justify-content: center;
+}
+
+.atencionAlCliente {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
+}
+
+@media screen and (max-width: 768px) {
+  .contenedor {
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+    margin: 20px 0%;
+  }
+  .contenedorBotones {
+    display: block;
+  }
+  .contenedorBotones input {
+    margin: 20px;
+  }
+  .contenedor img {
+    max-height: 400px;
+    margin: 0%;
+    width: 100%;
+  }
+  .contenedorBotonesProductos {
+    margin: 20px 0%;
+  }
+  .contenedor div.izquierda {
+    width: 100%;
+  }
+  .contenedor div.derecha {
+    width: 100%;
+  }
+  .navegacion {
+    margin: 0%;
+  }
+  .navegacion ul {
+    margin: 0%;
+  }
+  .navegacion li {
+    margin: 0%;
+  }
+  .final ul li {
+    margin: 0%;
+  }
+  .contenedor {
+    margin: 0%;
+  }
+  .contenedor div.izquierda input {
+    margin: 0%;
+  }
+  .contenedorBotonesProductos {
+    margin: 0%;
+  }
+  .ProductosSeccionProductos {
+    margin: 0%;
+  }
+  .ProductosSeccionProductos p {
+    margin: 25px 0%;
+  }
+  .ProductosSeccionProductos {
+    margin: none;
+  }
+  .cardcard {
+    margin: 0;
+  }
+}
+@media screen and (min-width: 990px) {
+  .navegacion {
+    height: 100px;
+    margin: 0 50px;
+    padding: 0 10px;
+  }
 }
 
 /*# sourceMappingURL=style.css.map */
