--- a/scss/_media.scss
+++ b/scss/_media.scss
@@ -57,6 +57,9 @@
   .ProductosSeccionProductos {
     margin: none;
   }
+  .cardcard {
+    margin: 0;
+  }
 }
 @media screen and (min-width: 990px) {
   .navegacion {
