--- a/scss/_servicios.scss
+++ b/scss/_servicios.scss
@@ -39,12 +39,13 @@
   background-color: map-get($map: $colores, $key: turquesauno);
   color: map-get($map: $colores, $key: blanco);
   &:hover {
-    width: 300px;
+    background-color: map-get($map: $colores, $key: turquesacuatro);
   }
 }
 
 .contenedorBotones {
   @include display-flex;
+  flex-wrap: wrap;
 }
 
 .contenedor div.derecha {
