--- a/scss/_ventana_contacto.scss
+++ b/scss/_ventana_contacto.scss
@@ -1,30 +1,17 @@
 @import "_variables";
 .background-contacto {
   background: map-get($map: $colores, $key: turquesados);
-  background: linear-gradient(
-    0deg,
-    #3b9b99 0%,
-    #146463 36%,
-    #5a8382 100%,
-    rgb(243, 243, 243) 100%
-  );
+
   padding-top: 20px;
 }
 
 .formcontacto {
-  background: map-get($map: $colores, $key: turquesados);
-  background: linear-gradient(
-    0deg,
-    #5bb3b1 0%,
-    #146463 36%,
-    #5a8382 100%,
-    rgb(243, 243, 243) 100%
-  );
+  background: map-get($map: $colores, $key: turquesatres);
   color: map-get($map: $colores, $key: blanco);
   padding: 50px;
   margin: 0 auto;
   width: 300px;
-  box-shadow: 3px 3px 10px map-get($map: $colores, $key: turquesados);
+  box-shadow: 3px 3px 10px map-get($map: $colores, $key: turquesatres);
   div {
     padding: 15px;
   }
@@ -33,6 +20,10 @@
   }
 }
 .enviar {
-  background-color: map-get($map: $colores, $key: turquesacuatro);
+  color: map-get($map: $colores, $key: blanco);
   border-radius: 15px;
+  padding: 5px;
+}
+.btn {
+  background-color: map-get($map: $colores, $key: blanco);
 }
